# primoPokerWasmClient

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_TESTING_RESULTS.md  PHASE3.5_IMPLEMENTATION_CHECKLIST.md  PHASE3.5_VISUAL_ENHANCEMENT_PLAN.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_IMPLEMENTATION_PLAN.md  README.md  Trunk.toml  index.html
assets/: README.md
src/: app.rs  auth.rs  game.rs  lib.rs  types.rs
src/components/: auth.rs  common.rs  demo.rs  game.rs  lobby.rs  mod.rs  pages.rs  profile.rs
src/components/lobby/: main_lobby.rs  mod.rs  player_profile_modal.rs  player_sidebar.rs  room_card.rs  room_filters.rs
src/graphics/: mod.rs
src/networking/: mod.rs
src/services/: auth_service.rs  mod.rs  websocket_service.rs
src/utils/: mod.rs
styles/: auth.css  components.css  game.css  home.css  main.css  visual-enhancements.css
styles/lobby/: player-profile-modal.css  player-sidebar.css  room-cards.css  room-filters.css
