[package]
name = "primo-poker-client"
version = "0.1.0"
edition = "2021"
authors = ["PrimoPoker Team"]
description = "High-performance WebAssembly poker client for real-time gameplay"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Web Framework - Yew for reactive UI
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "Location",
  "History",
  "Storage",
  "LocalStorage",
  "SessionStorage",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "AudioContext",
  "HtmlAudioElement",
  "Animation",
  "KeyframeEffect",
  "CssStyleDeclaration",
] }

# Networking and WebSockets
gloo-net = { version = "0.5", features = ["websocket"] }
gloo-utils = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-events = "0.2"
gloo-storage = "0.3"

# Async runtime
wasm-bindgen-futures = "0.4"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
wasm-logger = "0.2"

# UUID generation
uuid = { version = "1.10", features = ["v4", "wasm-bindgen"] }

# Time handling
chrono = { version = "0.4", features = ["wasmbind"] }

# Graphics and animations (optional WebGL support)
wgpu = { version = "22.0", optional = true }

# Testing
wasm-bindgen-test = "0.3"

[features]
default = []
webgl = ["wgpu"]

[dependencies.web-sys]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"ge]
name = "primo-poker-client"
version = "0.1.0"
edition = "2024"

[dependencies]
